--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
-  <meta name="description" content="">
+  <title>Muhammad Adam Fahmil 'Ilmi</title>
+  <meta name="keywords" content="Muhammad Adam Fahmil 'Ilmi'">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
@@ -39,10 +39,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    Muhammad Adam Fahmil 'Ilmi
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    Student of Informatics
                 </h4>
             </div>
         </header>
@@ -71,17 +71,17 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="images/photo-adam-fahmil.jpg" alt="Muhammad Adam Fahmil 'Ilmi'">
                             </div>
                             <div class="info">
-                                <h2>
-                                    Sunny Luthra
-                                </h2>
+                                <h3>
+                                    Muhammad Adam Fahmil 'Ilmi
+                                </h3>
                                 <h4>
-                                    Animator / Photographer
+                                    Student of Informatics
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    Hello, call me <bold>Adam</bold>, and now finishing my undergraduate study with major in Informatics/Computer Science.
                                 </p>
                             </div>
                         </div>
@@ -97,9 +97,6 @@
                                     <li>
                                         <a href="#contact">Hire me for your next project</a>
                                     </li>
-                                    <li>
-                                        <a href="#features">Features</a>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -109,7 +106,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:adamfahmil020@gmail.com">adamfahmil020@gmail.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
@@ -118,17 +115,17 @@
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
+                                <h3><a href="https://www.facebook.com/adamfahmil">Muhammad Adam Fahmil 'Ilmi</a></h3>
                                 <p>Facebook Profile</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <i class="icon-instagram"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
+                                <h3><a href="https://instagram.com/adamfahmil96/">@adamfahmil96</a></h3>
+                                <p>Instagram Account</p>
                               </div>
                             </div>
                           </div>
@@ -141,60 +138,68 @@
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
-                                Work Experience
+                              Education
                             </h3>
                             <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
+                              <li>
+                                  <h5>
+                                      Sebelas Maret University
+                                  </h5><span class="label label-info">2014-NOW</span>
+                                  <p>
+                                      Undergraduate Student.
+                                  </p>
+                              </li>
+                              <li>
+                                  <h5>
+                                      Senior High School 1 Surakarta
+                                  </h5><span class="label label-info">2011-2014</span>
+                                  <p>
+                                      Majored in Science in High School.
+                                  </p>
+                              </li>
+                              <li>
+                                  <h5>
+                                      "Al-Islam" Junior High School 1 Surakarta
+                                  </h5><span class="label label-info">2008-2011</span>
+                                  <p>
+                                      Junior High School Student.
+                                  </p>
+                              </li>
                             </ul>
                             <h3>
-                                Education
+                                Organization
                             </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                        Sebelas Maret University Robotic Team
+                                    </h5><span class="label label-success">2016-2017</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Programming Division Coordinator
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
+                                        HIMASTER 2016
+                                    </h5><span class="label label-success">2016-2017</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Member of Research and Technology Division
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        FMIPA UNS Robotic Team
+                                    </h5><span class="label label-success">2015-2016</span>
+                                    <p>
+                                        Junior in Programming Division.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        HIMASTER 2015
+                                    </h5><span class="label label-success">2015-2016</span>
+                                    <p>
+                                        Deputy Coordinator of Research and Technology Division
                                     </p>
                                 </li>
                             </ul>
@@ -329,7 +334,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </section>
                 </div>
               <!-- End Portfolio Data -->
@@ -370,7 +375,7 @@
                          </div>
                        </div>
                        <div class="break"></div>
-                       
+
                     </section>
                 </div>
               <!-- End Contact Data -->
@@ -379,7 +384,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
+                <a href="http://adamfahmil.my.id/">Adam Fahmil</a> | &copy Copyright 2017
             </p>
         </footer>
     </div><!-- #main -->
